<resources>
    <string name="app_name">VelParked</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="no_connection">No internet connection!</string>
    <string name="no_connection_title">No Internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_vehicle_no">Enter Vehicle No.</string>
    <string name="powerd_by">Ambrosia Hospitality(P)Ltd.</string>
    <string name="submit">SUBMIT</string>
    <string name="user_id">User Name</string>
    <string name="password">Password</string>
    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="validate_card">Validate Card</string>
    <string name="issue_card">Issue Card</string>
    <string name="call_my_car">Call My Car</string>
    <string name="logout">LogOut</string>

    <!--NFC-->
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="verify_car_no">Please verify the Car No.</string>
    <string name="cancel">CANCEL</string>
    <string name="show_card">Show Card or Mobile number </string>
    <string name="show_valet_card">Show Valet Card </string>
    <string name="show_card_here">Show Card or Mobile number here</string>
    <string name="call_car">CALL YOUR CAR</string>
    <string name="card_not_found">Card not found. Please try again</string>
    <string name="try_another_card">Try another Card</string>
    <string name="confirm">CONFIRM</string>
    <string name="handover_car_to_customer">Handover car to customer</string>
    <string name="is_ready_to_call">is ready to call</string>
    <string name="your_vehicle_with_no">Your vehicle with no.</string>
    <string name="thank_you">Thank You</string>
    <string name="hope_you_enjoyed_here">Hope you enjoyed here....!</string>
    <string name="your_vehicle_will_be_on_gate_soon">Your vehicle will be on gate soon</string>
    <string name="dot_string">--:--</string>
    <string name="in">In :</string>
    <string name="req">Req :</string>
    <string name="out">Out :</string>
    <string name="validate">Validate Card</string>
    <string name="park_vehicle">PARK VEHICLE</string>
    <string name="next">NEXT</string>
    <string name="invalidup">Invalid username and password.</string>
    <string name="digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="digits_number">1234567890</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number.</string>
    <string name="valet">Valet</string>
    <string name="parking_master">Parking Master</string>


</resources>
