<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutHeightWrapWidthMatchStyling.Padding"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="val.com.valparked.fragment.ValidConfirmFragment">

    <TextView
        style="@style/TextStyleNormal.Gray"
        android:layout_marginTop="@dimen/margin_25dp"
        android:text="@string/your_vehicle_with_no" />

    <TextView
        android:id="@+id/tvCarNo"
        style="@style/TextStyleNormal.Large30.margin" />

    <TextView
        style="@style/TextStyleNormal"
        android:layout_marginTop="@dimen/margin_25dp"
        android:text="@string/is_ready_to_call" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <Button
            android:id="@+id/llConfirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/reactagular_green"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large30" />

        <Button
            android:id="@+id/llCancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/border_shap"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:text="@string/cancel"
            android:textColor="@color/light_oragne"
            android:textSize="@dimen/text_size_large30" />

    </LinearLayout>

</LinearLayout>
