<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="val.com.velparked.fragment.NfcRederCardFragment">

    <TextView
        android:id="@+id/tvCarNo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llShowCard"
        android:gravity="center"
        android:keepScreenOn="true"
        android:visibility="visible"
        android:text="@string/app_name"
        style="@style/TextStyleNormal.Large30.borderColor" />

    <LinearLayout
        android:id="@+id/llShowCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvShow"
            style="@style/TextStyleNormal"
            android:textSize="@dimen/text_size_large"
            android:text="@string/show_card"
            />

        <ImageView
            android:id="@+id/imIssueCardCheck"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/tapcard" />

        <EditText
            android:id="@+id/etMobileNumber"
            style="@style/TextStyleNormal.placeholderColor"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_25dp"
            android:background="@drawable/edittext_shap"
            android:digits="@string/digits_number"
            android:gravity="center"
            android:hint="@string/please_enter_mobile_number"
            android:imeActionLabel="Done"
            android:visibility="gone"
            android:inputType="phone"
            android:maxLength="10"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvError"
            style="@style/TextStyleNormal.Red"
            tools:text="Show Card" />

    </LinearLayout>

</RelativeLayout>
