<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="val.com.valparked.activity.LoginActivity">


    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edUserId"
            style="@style/TextStyleNormal.Large.Bold"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/edittext_shap"
            android:hint="@string/user_id"
            android:padding="@dimen/padding_large" />

        <EditText
            android:id="@+id/edPassword"
            style="@style/TextStyleNormal.Large.Bold"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/edittext_shap"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_large" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/LayoutHeightWrapWidthMatchStyling.Button"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/blue"
            android:text="@string/submit" />
    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llLogin"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_large30" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="verion"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
